--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <groupId>com.flipkart</groupId>
   <artifactId>flipkart</artifactId>
   <packaging>war</packaging>
-  <version>1.3-SNAPSHOT</version>
+  <version>1.3-Release</version>
   <name>flipkart Maven Webapp</name>
 
 
