--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
   <name>flipkart Maven Webapp</name>
 
 
- 		 <url>http://127.0.0.1:9000</url>
+ 		 <!-- <url>http://127.0.0.1:9000</url> -->
 
 
   <!-- <url>http://maven.apache.org</url>-->
